feat: disconnect application from datasources
